# Alik_AI

./: .gitignore  CLAUDE.md  GOING_LIVE.md  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  PHASE_8_RENDEZVOUS.md
scripts/: read_report.py  synthetic_users.py
scripts/connections_stress/: README.md  build_report.py  capture_openers.py  dump_connections.py  fake_auth.py  personas.py  run_e2e.sh  run_passes.py  seed_brain.py
services/auth/: .env.example  README.md  pyproject.toml
services/auth/src/auth_service/: __init__.py  config.py  deps.py  main.py  models.py  supabase_client.py
services/auth/src/auth_service/routes/: __init__.py  auth.py  internal.py  profile.py
services/auth/src/auth_service/services/: __init__.py  auth_svc.py  profile_svc.py
services/auth/tests/: conftest.py  test_auth.py  test_internal.py  test_profile.py
services/connections/: .env.example  README.md  pyproject.toml
services/connections/src/connections_service/: __init__.py  auth_client.py  brain_client.py  cluster.py  config.py  deps.py  eval.py  ingest.py  interest_tagger.py  interests.py  kernel.py  llm.py  main.py  models.py  monitoring.py  passlog.py  rendezvous_client.py  routes.py  schema.sql  scoring.py  store.py  surface.py
services/connections/tests/: conftest.py  test_api.py  test_cluster.py  test_eval.py  test_group_routes.py  test_ingest.py  test_interest_tagger.py  test_interests.py  test_kernel.py  test_monitoring.py  test_pass_summary.py  test_routes.py  test_scoring.py  test_store.py  test_surface.py  test_surface_pass.py
services/matching/: .env.example  README.md  pyproject.toml
services/matching/data/: jobs.json
services/matching/src/matching_service/: __init__.py  brain_client.py  catalog.py  config.py  deps.py  main.py  models.py  routes.py  schema.sql  scorer.py  selection.py  store.py
services/matching/tests/: conftest.py  test_matching_api.py  test_scorer.py
services/rendezvous/: .env.example  pyproject.toml
services/rendezvous/src/rendezvous_service/: brain_client.py  config.py  deps.py  lifecycle.py  main.py  models.py  routes.py  schema.sql  store.py
services/rendezvous/tests/: conftest.py  test_lifecycle.py  test_routes.py
src/alik/: __init__.py  api.py  auth_client.py  cli.py  companion.py  config.py  connections_client.py  extraction.py  job_matcher.py  llm.py  matching_client.py  models.py  persona.txt  proactivity.py  profile.py  prompt.py  rendezvous_client.py  scheduler.py  sleep_pass.py
src/alik/memory/: __init__.py  base.py  graph.py  graph_store.py  pg_redis.py  schema.sql
tests/: conftest.py  test_commitment_dedup.py  test_commitment_resolve.py  test_companion.py  test_continuity.py  test_decay.py  test_detect.py  test_extraction.py  test_graph_write.py  test_job_delivery.py  test_job_matcher.py  test_job_sleep_pass.py  test_people_match.py  test_proactive_opener.py  test_proactivity.py  test_profile.py  test_profile_api.py  test_promote.py  test_prompt.py  test_reflect_back.py  test_rendezvous_companion.py  test_sleep_pass.py  test_sleep_pass_detect.py  test_social_events.py  test_social_events_api.py  test_temporal_resolution.py  test_tick_commitments.py  test_trait_inject.py
