[project]
name = "alik"
version = "0.1.0"
description = "Voice-first AI companion — Phase 1: text companion loop + working/episodic memory"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "asyncpg>=0.30",
    "falkordb>=1.6.1",
    "fastapi>=0.115",
    "pydantic-settings>=2.5",
    "redis>=5.2",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
# Nightly sleep-pass scheduler. Optional: scheduler.py degrades gracefully if absent.
scheduler = ["apscheduler>=3.10"]

[project.scripts]
alik = "alik.cli:main"
alik-sleep = "alik.sleep_pass:main"

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alik"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
