[project]
name = "alik-connections-service"
version = "0.1.0"
description = "alik people-matching ('connections') microservice — compares users' profiles to broker real-life intros (port 8003)"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
# The ingest scheduler. Optional: main.py degrades gracefully (no scheduler) if absent.
scheduler = ["apscheduler>=3.10"]

[project.scripts]
connections-ingest = "connections_service.ingest:main"
connections-score = "connections_service.scoring:main"
connections-eval = "connections_service.eval:main"
connections-surface = "connections_service.surface:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connections_service"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# B008: FastAPI's Depends() in argument defaults is the framework's intended pattern.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
