[project]
name = "alik-matching-service"
version = "0.1.0"
description = "alik job-matching microservice — scores a curated catalog against a user's living profile (port 8002)"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matching_service"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# B008: FastAPI's Depends() in argument defaults is the framework's intended pattern.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
