[project]
name = "alik-rendezvous-service"
version = "0.1.0"
description = "alik rendezvous microservice — coordinates an accepted intro into a real meeting (port 8004)"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
# The advance-pass scheduler. Optional: main.py degrades gracefully (no scheduler) if absent.
scheduler = ["apscheduler>=3.10"]

[project.scripts]
rendezvous-advance = "rendezvous_service.lifecycle:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rendezvous_service"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# B008: FastAPI's Depends() in argument defaults is the framework's intended pattern.
ignore = ["B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
